--- a/src/Busybee/People/FamilyBundle/Resources/views/Family/edit.html.twig
+++ b/src/Busybee/People/FamilyBundle/Resources/views/Family/edit.html.twig
@@ -8,7 +8,8 @@
 "BusybeeTemplateBundle:Template:bootstrap.html.twig"
 "BusybeeTemplateBundle:Template:jquery.collection.html.twig"
 "BusybeeFamilyBundle:Family:careGiverCollection.html.twig"
-"BusybeeFamilyBundle:Family:studentCollection.html.twig" %}
+"BusybeeFamilyBundle:Family:studentCollection.html.twig"
+'@BusybeePhone/Phone/phoneCollection.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
