--- a/src/Busybee/People/FamilyBundle/Resources/views/Family/script.html.twig
+++ b/src/Busybee/People/FamilyBundle/Resources/views/Family/script.html.twig
@@ -118,7 +118,7 @@
     });
 
     $(".careGiverList").collection({
-        name_prefix: '{{ form.careGiver.vars.full_name }}',
+        name_prefix: '{{ form.careGivers.vars.full_name }}',
         allow_up: true,
         allow_down: true,
         add: '<button title="{{ 'family.caregiver.add'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
