--- a/src/Busybee/People/FamilyBundle/Resources/views/Family/caregiver.html.twig
+++ b/src/Busybee/People/FamilyBundle/Resources/views/Family/caregiver.html.twig
@@ -8,7 +8,7 @@
 "BusybeeFamilyBundle:Family:careGiverCollection.html.twig"
 "BusybeeFamilyBundle:Family:studentCollection.html.twig" %}
 
-{% include '@BusybeeTemplate/Page/panelStart.html.twig' with {'panelStyle': 'info', 'transDomain': 'BusybeeFamilyBundle', 'panelParagraph': 'family.help.caregiver', 'header': form.careGiver.vars.label } %}
-    {{ form_widget(form.careGiver) }}
+{% include '@BusybeeTemplate/Page/panelStart.html.twig' with {'panelStyle': 'info', 'transDomain': 'BusybeeFamilyBundle', 'panelParagraph': 'family.caregivers.help', 'header': form.careGivers.vars.label } %}
+    {{ form_widget(form.careGivers) }}
 {% include '@BusybeeTemplate/Page/panelEnd.html.twig' %}
-{% do form.careGiver.setRendered %}
+{% do form.careGivers.setRendered %}
