--- a/src/Busybee/People/FamilyBundle/Resources/views/Family/contacts.html.twig
+++ b/src/Busybee/People/FamilyBundle/Resources/views/Family/contacts.html.twig
@@ -8,10 +8,10 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
-                    {% include 'BusybeePersonBundle:Person:phones.html.twig' %}
+                    {% include '@BusybeePhone/Phone/phones.html.twig' %}
                 </div>
                 <div class="col-sm-6">
-                    {% include 'BusybeePersonBundle:Person:addresses.html.twig' %}
+                    {% include '@BusybeeAddress/Address/addresses.html.twig' %}
                 </div>
             </div>
         </div>
