--- a/src/Busybee/Core/SystemBundle/Resources/views/Bundle/list.html.twig
+++ b/src/Busybee/Core/SystemBundle/Resources/views/Bundle/list.html.twig
@@ -26,16 +26,26 @@
 
 {% block contentContainer %}
     {% set h3Content = '' %}
-    {% if form.vars.manager.anyUpdateRequired() %}
-        {% set h3Content = h3Content ~ miscButton({class: 'btn btn-warning halflings halflings-arrow-up', title: 'bundle.update.allbutton', transDomain: 'SystemBundle', windowOpen: {route: path('bundle_update', {name: 'All'})}}) %}
-    {% endif %}
-    {% if form.vars.manager.SQLCount > 0 %}
-        {% set h3Content = h3Content ~ miscButton({class: 'btn btn-warning halflings halflings-save', title: 'bundle.update.sqlbutton', transDomain: 'SystemBundle', windowOpen: {route: path('bundle_database_update')}}) %}
-    {% endif %}
     {% include '@BusybeeTemplate/Page/panelStart.html.twig' with {header: 'system.bundle.manage.title', transDomain: 'SystemBundle'} %}
     {% block flashMessages %}
         {% include '@BusybeeTemplate/Default/flash.html.twig' with {transDomain: 'SystemBundle', flashClass: 'fadeAlert'} %}
     {% endblock flashMessages %}
+
+
+    {% if form.vars.manager.anyUpdateRequired() %}
+        {% set h3Content = miscButton({class: 'btn btn-warning halflings halflings-arrow-up', title: 'bundle.update.allbutton', transDomain: 'SystemBundle', windowOpen: {route: path('bundle_update', {name: 'All'})}}) %}
+        {% include '@BusybeeTemplate/Page/panelStart.html.twig' with {header: 'system.bundle.update.title', transDomain: 'SystemBundle', panelStyle: 'warning', panelParagraph: 'system.bundle.update.description'} %}
+        {% include '@BusybeeTemplate/Page/panelEnd.html.twig' %}
+    {% endif %}
+
+    {% if form.vars.manager.SQLCount > 0 %}
+        {% set desc = 'system.bundle.database.onechange' %}
+        {% if form.vars.manager.SQLCount > 1 %}{% set desc = 'system.bundle.database.multichange' %}{% endif %}
+        {% set h3Content = miscButton({class: 'btn btn-warning halflings halflings-save', title: 'bundle.update.sqlbutton', transDomain: 'SystemBundle', windowOpen: {route: path('bundle_database_update')}}) %}
+        {% include '@BusybeeTemplate/Page/panelStart.html.twig' with {header: 'system.bundle.database.title', transDomain: 'SystemBundle', panelStyle: 'warning', panelParagraph: desc, panelParams: {'%count%': form.vars.manager.SQLCount}} %}
+        {% include '@BusybeeTemplate/Page/panelEnd.html.twig' %}
+    {% endif %}
+
 
 
     {{ form_start(form, {attr: {id: 'bundleForm'}}) }}
