--- a/src/Busybee/Core/TemplateBundle/Resources/views/Template/bootstrap.html.twig
+++ b/src/Busybee/Core/TemplateBundle/Resources/views/Template/bootstrap.html.twig
@@ -6,7 +6,7 @@
         {{- form_label(form) -}}
         {% if deletePhoto is not null %}
             <button class="btn btn-warning halflings halflings-erase"
-                    title="{{ 'delete.photo'|trans({}, translation_domain) }}"
+                    title="{{ 'photo.delete'|trans({}, translation_domain) }}"
                     onclick="window.open('{{ deletePhoto }}','DeletePhoto','width=50,height=50')"></button>
         {% endif %}
     {% else %}
