--- a/src/Busybee/People/PhoneBundle/Resources/views/Phone/phones.html.twig
+++ b/src/Busybee/People/PhoneBundle/Resources/views/Phone/phones.html.twig
@@ -1,15 +1,15 @@
-{# src/Busybee/PersonBundle/Resources/views/Person/Phones.html.twig #}
+{# phones.html.twig #}
 
-{% trans_default_domain "BusybeePersonBundle" %}
+{% trans_default_domain "BusybeePhoneBundle" %}
 
 <div class="panel panel-info busybee-panel">
     <div class="panel-heading">
         <h3 class="panel-title">{{ form_label(form.phone) }}</h3>
     </div>
     <div class="panel-body">
-        <p class="alert alert-warning">{{ 'phone.save'|trans }}</p>
+        <p class="alert alert-warning">{{ 'phone.warning'|trans }}</p>
         {% if phones is defined %}
-            <p class="alert alert-info"><strong>{{ 'Linked Phone Numbers'|trans }}</strong><br/>
+            <p class="alert alert-info"><strong>{{ 'family.phone.linked'|trans }}</strong><br/>
                 {% for phone in phones %}
                     {{ formatPhone(phone)|raw }}<br/>
                 {% endfor %}</p>
