--- a/src/Busybee/Facility/InstituteBundle/Resources/views/Department/staffCollection.js.html.twig
+++ b/src/Busybee/Facility/InstituteBundle/Resources/views/Department/staffCollection.js.html.twig
@@ -7,7 +7,50 @@
             allow_down: false,
             add: '<button title="{{ 'department.staff.add'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
             remove: '<button title="{{ 'department.staff.remove'|trans }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
-            add_at_the_end: true
+            add_at_the_end: true,
+            before_remove: function (collection, element) {
+                var source = $(element[0]).find('.staffRemove');
+                var id = source.attr('id');
+                id = id.replace('staffRemove', '');
+                if (id == '0') {
+                    return true;
+                }
+                return staffRemove(id);
+            }
         });
+
+        function staffRemove(id) {
+            var xx = true;
+
+            if (id > 0) {
+
+                var path = '{{ path('department_staff_remove', {'id': '__id__'}) }}';
+                path = path.replace('__id__', id);
+
+                $.ajax({
+                    url: path,
+                    type: 'POST',
+                    async: false,
+                    success: function (data) {
+
+                        var message = '<div class="alert alert-__status__">__message__</div>';
+
+                        message = message.replace('__message__', data['message']);
+                        message = message.replace('__status__', data['status']);
+                        if (data['status'] === 'success') {
+                            $('.staffMessage').html(message).fadeIn(3).fadeOut(5000);
+                        } else if (data['status'] === 'error') {
+                            $('.staffMessage').html(message).fadeIn(3);
+                            xx = false;
+                        } else if (data['status'] === 'warning') {
+                            $('.staffMessage').html(message).fadeIn(3);
+                            xx = false;
+                        }
+                    }
+                });
+            }
+
+            return xx;
+        }
     </script>
 {% endif %}
