Sidebar menu build
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/CalendarBundle/Resources/views/Calendar/yearCalendar.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Calendar/yearCalendar.html.twig
@@ -2,6 +2,7 @@
 
 {% trans_default_domain "BusybeeCalendarBundle" %}
 
+{% set fullPage = true %}
 {% extends "@BusybeeTemplate/Default/template.html.twig" %}
 
 {% block title %}{{ parent() }}{{ 'calendar.generate.title'|trans }}{% endblock title %}
