--- a/src/Busybee/Core/SecurityBundle/Resources/views/User/passwordAlreadyRequested.html.twig
+++ b/src/Busybee/Core/SecurityBundle/Resources/views/User/passwordAlreadyRequested.html.twig
@@ -1,12 +1,12 @@
 {% extends "@BusybeeTemplate/Popup/template.html.twig" %}
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
-{% block title %}{{ parent() }}{{ 'security.request.password.already'|trans }}{% endblock title %}
+{% block title %}{{ parent() }}{{ 'security.request.password.already'|trans({'%{name}': user.formatName}) }}{% endblock title %}
 
 {% block contentContainer %}
     <div class="row marketing">
         <div class="col-lg-12 alert alert-warning">
-            <p class="lead">{{ 'security.resetting.password_already_requested'|trans }}</p>
+            <p class="lead">{{ 'security.resetting.password_already_requested'|trans({'%{name}': user.formatName}) }}</p>
         </div>
     </div>
 {% endblock contentContainer %}
