--- a/src/Busybee/People/FamilyBundle/Resources/views/Family/contacts.html.twig
+++ b/src/Busybee/People/FamilyBundle/Resources/views/Family/contacts.html.twig
@@ -2,9 +2,7 @@
 
 {% trans_default_domain "BusybeeFamilyBundle" %}
 
-<div class="panel panel-primary busybee-panel">
-    {% include "BusybeeFamilyBundle:Family:panelHeader.html.twig" with {'header': 'family.title.contacts'} %}
-    <div class="panel-body">
+    {% include "BusybeeFamilyBundle:Family:panelHeader.html.twig" with {header: 'family.title.contacts'} %}
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
@@ -15,5 +13,4 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+{% include '@BusybeeTemplate/Page/panelEnd.html.twig' %}
