--- a/src/Busybee/People/FamilyBundle/Resources/views/Family/details.html.twig
+++ b/src/Busybee/People/FamilyBundle/Resources/views/Family/details.html.twig
@@ -2,9 +2,7 @@
 
 {% trans_default_domain "BusybeeFamilyBundle" %}
 
-<div class="panel panel-primary busybee-panel">
     {% include "BusybeeFamilyBundle:Family:panelHeader.html.twig" %}
-    <div class="panel-body">
         <div class="container-fluid">
             <div class="row">
                 <div class="well col-sm-6">
@@ -23,5 +21,4 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+{% include '@BusybeeTemplate/Page/panelEnd.html.twig' %}
