--- a/src/Busybee/People/FamilyBundle/Resources/views/Family/edit.html.twig
+++ b/src/Busybee/People/FamilyBundle/Resources/views/Family/edit.html.twig
@@ -41,11 +41,12 @@
             {% endfor %}
         </ul>
         {% set active = ' active' %}
+        {% set name = form.name.vars.value %}
         <div class="tab-content">
-            {% for name,tab in tabs %}
+            {% for id,tab in tabs %}
                 {% set translation = 'BusybeeFamilyBundle' %}
                 {% if tab.translation is defined %}{% set translation = tab.translation %}{% endif %}
-                <div class="tab-pane{{ active }}" id="{{ name }}">
+                <div class="tab-pane{{ active }}" id="{{ id }}">
                     {% if tab.message is defined %}
                         <div class="container-fluid">
                             <div class='row' id="{{ tab.message }}" style="display: none;">
