House Management Image Uploader changes
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/SystemBundle/Resources/views/House/edit.html.twig
+++ b/src/Busybee/Core/SystemBundle/Resources/views/House/edit.html.twig
@@ -22,6 +22,7 @@
     {{ all_form_errors(fullForm, "div", "alert alert-danger fadeAlert") }}
     {% set form_path = [] %}
     {% include '@BusybeeTemplate/Page/panelStart.html.twig' with {header: 'school.admin.houses.title', transDomain: 'SystemBundle'} %}
+    <div class="houseMessage"></div>
     {{ form_start(form) }}
     {{ form_widget(form.houses) }}
     {{ form_end(form) }}
