--- a/src/Busybee/Core/SystemBundle/Resources/views/House/script.html.twig
+++ b/src/Busybee/Core/SystemBundle/Resources/views/House/script.html.twig
@@ -3,8 +3,8 @@
         name_prefix: '{{ form.vars.full_name }}',
         allow_up: false,
         allow_down: false,
-        add: '<button title="{{ 'contact.phone.add'|trans({}, 'BusybeePersonBundle') }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
-        remove: '<button title="{{ 'contact.phone.remove'|trans({}, 'BusybeePersonBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
+        add: '<button title="{{ 'setting.house.add'|trans({}, 'SystemBundle') }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
+        remove: '<button title="{{ 'setting.house.remove'|trans({}, 'SystemBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
         add_at_the_end: true
     });
 </script>
